fix the compatible layout problems in different screen size.

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -7962,6 +7962,16 @@ video {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:block {
     display: block;
